# val-random-discord

./: CHANGELOG.md  Cargo.toml  Dockerfile
.github/workflows/: ci.yaml  release.yaml
assets/: agents.json
src/: agent.rs  main.rs
src/commands/: agents.rs  help.rs  mod.rs  random.rs
