[package]
name = "val-random-discord"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
dotenvy = "0.15.7"
poise = "0.6.1"
tokio = { version = "1.51.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.44"
rand = "0.8.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tracing-subscriber = "0.3.23"
